worldpop zonal stats calucalated

--- a/notebooks/jupyter/OSM_Raster_PolyPoints.ipynb
+++ b/notebooks/jupyter/OSM_Raster_PolyPoints.ipynb
@@ -22,7 +22,9 @@
     "\n",
     "### NOTE on 2018-11-30 DROP polygon doubles at the VERY END\n",
     "\n",
-    "### NOTE on 2018-12-04 Add array to function to capture osm points that are not found w/in polygons"
+    "### NOTE on 2018-12-04 Add array to function to capture osm points that are not found w/in polygons\n",
+    "\n",
+    "### Note on 2018-12-04 In loop, drop polygons as they are matched to lower the number "
    ]
   },
   {
@@ -569,9 +571,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -583,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
