--- a/notebooks/jupyter/Raster_clip.ipynb
+++ b/notebooks/jupyter/Raster_clip.ipynb
@@ -9,158 +9,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Local computer \n",
-    "infilepath = '/Users/cascade/Github/NTL/data/raw/'\n",
-    "outfilepath = '/Users/cascade/Github/NTL/temp_data/'\n",
-    "otherfilepath = '/Users/cascade/Desktop/'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import rasterio\n",
-    "import numpy as np\n",
-    "from shapely.geometry import Polygon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = rasterio.open(otherfilepath+'test.tif')\n",
-    "grump_2000 = rasterio.open(infilepath+\"\"\"grumpdata/Raster/gpw-v4-population-count-adjusted-to-2015-unwpp-country-totals-rev10_2000_30_sec_tif/gpw_v4_population_count_adjusted_to_2015_unwpp_country_totals_rev10_2000_30_sec.tif\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from rasterio import plot\n",
-    "band = test.read(1)\n",
-    "\n",
-    "band[band < 0] = -4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kwargs = africa1k_2000.meta\n",
-    "kwargs.update(dtype=rasterio.float32, count = 1)\n",
-    "\n",
-    "with rasterio.open(otherfilepath+'africa1k_footprint_test.tif', 'w', **kwargs) as dst:\n",
-    "         dst.write_band(1, band.astype(rasterio.float32))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "poly_gdf.to_file(outfilepath+'WorldPop_Africa_footprint.shp', driver='ESRI Shapefile')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pull a basemap of Africa\n",
-    "import geopandas as gpd\n",
-    "\n",
-    "outfilepath = '/Users/cascade/Github/NTL/temp_data/'\n",
-    "\n",
-    "africa = gpd.read_file(outfilepath+'Africa.shp')\n",
-    "africa.plot();a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "africa['continent'] = 'Africa'\n",
-    "africa.head(6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "continent = africa.dissolve(by='continent')\n",
-    "continent.plot();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write it out locally\n",
     "import fiona\n",
-    "outfilepath = '/Users/cascade/Github/NTL/temp_data/'\n",
-    "\n",
-    "africa.to_file(outfilepath+'africa_gpd.shp', driver='ESRI Shapefile')\n"
+    "from rasterio.mask import mask"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def raster_clip(src_poly)\n",
-    "    \"\"\" This funciton uploads a shape file, disolved boundaries \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    poly\n",
+    "# data folder git will ignore\n",
+    "data = \"/home/cascade/tana-crunch-cascade/projects/NTL/data/\" # git will ignore\n",
+    "temp_data = \"/home/cascade/tana-crunch-cascade/projects/NTL/temp_data/\" # git will not ignore - NO BIG FILES \n",
     "\n",
+    "# Local computer \n",
+    "# infilepath = '/Users/cascade/Github/NTL/data/raw/worldpop/Africa-1km-Population/'\n",
+    "# outfilepath = '/Users/cascade/Github/NTL/temp_data/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def raster_clip(raster, shape, file):\n",
+    "    with fiona.open(shape, \"r\") as shapefile:\n",
+    "        geoms = [feature[\"geometry\"] for feature in shapefile]\n",
     "\n",
-    "zambia_dist = gpd.read_file(\"zmb_popa_adm1_census2010f_ISCGM_CSO_OCHA_.shp\")\n",
-    "zambia_dist.plot()\n",
+    "    with rasterio.open(raster) as src:\n",
+    "        out_image, out_transform = mask(src, geoms, crop=True)\n",
+    "        out_meta = src.meta.copy()\n",
     "\n",
-    "zambia = zambia_dist[['COUNTRY', 'geometry']]\n",
-    "zambia = zambia.dissolve(by = \"COUNTRY\")\n",
-    "zambia.plot()\n",
+    "    out_meta.update({\"driver\": \"GTiff\",\n",
+    "                     \"height\": out_image.shape[1],\n",
+    "                     \"width\": out_image.shape[2],\n",
+    "                     \"transform\": out_transform})\n",
     "\n",
-    "with fiona.open(\"zambia.shp\", \"r\") as shapefile:                                #<--- Need to figure out how to get the geometry from shp file directly \n",
-    "    features = [feature[\"geometry\"] for feature in shapefile]\n",
-    "\n",
-    "with rasterio.open(\"F182013.v4c.pct_lights.tif\") as src:                        #<--- Need to figure out how to get it not to write to a file, but just store in memory at this point\n",
-    "    out_image, out_transform = rasterio.mask.mask(src, features, crop=True)\n",
-    "    out_meta = src.meta.copy()\n",
-    "\n",
-    "out_meta.update({\"driver\": \"GTiff\",\n",
-    "                 \"height\": out_image.shape[1],\n",
-    "                 \"width\": out_image.shape[2],\n",
-    "                 \"transform\": out_transform})\n",
-    "with rasterio.open(\"dmsp13_zambia.tif\", \"w\", **out_meta) as dest:\n",
-    "    dest.write(out_image)  "
+    "    with rasterio.open(file, \"w\", **out_meta) as dest:\n",
+    "        dest.write(out_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raster = data+'gpw_v4_population_count_adjusted_to_2015_unwpp_country_totals_rev10_2000_30_sec.tif'\n",
+    "shape = temp_data+'20181205_AfricaBase_buffered.shp'\n",
+    "file = data+'test.tif'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'count': 1,\n",
+       " 'crs': CRS({'init': 'epsg:4326'}),\n",
+       " 'driver': 'GTiff',\n",
+       " 'dtype': 'float32',\n",
+       " 'height': 8684,\n",
+       " 'nodata': -3.4028230607370965e+38,\n",
+       " 'transform': Affine(0.00833333333333387, 0.0, -25.46666666665672,\n",
+       "       0.0, -0.00833333333333387, 37.44166666667293),\n",
+       " 'width': 10687}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# raster_clip(raster, shape, file)\n",
+    "# test = rasterio.open(data+'test.tif')\n",
+    "# test.meta"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -174,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
