--- a/notebooks/jupyter/OSM_Python_Query.ipynb
+++ b/notebooks/jupyter/OSM_Python_Query.ipynb
@@ -136,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "elasped time to do the quary:115.00480484962463\n"
+      "elasped time to do the quary:176.21600008010864\n"
      ]
     }
    ],
@@ -175,6 +175,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(response_dict)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -187,15 +207,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outfilepath = '/home/cascade/tana-crunch-cascade/projects/NTL/temp_data/'\n",
+    "# temp_data = '../../temp_data/'\n",
     "\n",
-    "# with open(outpath+'africa_cities.json', 'w') as fp:\n",
-    "#     json.dump(gps, fp)"
+    "# with open(temp_data+'20181206_osmafrica_cities_all.json', 'w') as fp:\n",
+    "#      json.dump(response_dict, fp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,40 +234,128 @@
     "    coords = []\n",
     "    for country in response_dict:    \n",
     "        for element in response_dict[country]['elements']:\n",
+    "            country = country\n",
     "            i_d = str(element['id']) #keep as string for now\n",
     "            lat = element['lat']\n",
     "            lon = element['lon']\n",
-    "            coords.append((i_d, lat, lon))\n",
+    "            coords.append((country, i_d, lat, lon))\n",
     "\n",
     "    coords_arr = np.array(coords)\n",
-    "    coords_arr\n",
+    "    #coords_arr\n",
     "    \n",
     "    # make dataframe\n",
     "    coords_df = pd.DataFrame(data=coords_arr)\n",
-    "    coords_df.columns = ['id','lat','lon']\n",
+    "    coords_df.columns = ['country','osm_id','lat','lon']\n",
     "\n",
     "    return coords_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>osm_id</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>27564946</td>\n",
+       "      <td>36.364519</td>\n",
+       "      <td>6.60826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>27565103</td>\n",
+       "      <td>35.7032751</td>\n",
+       "      <td>-0.6492976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>253292160</td>\n",
+       "      <td>36.7137843</td>\n",
+       "      <td>4.0493919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>262963217</td>\n",
+       "      <td>33.3611766</td>\n",
+       "      <td>6.8603492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>262964638</td>\n",
+       "      <td>33.1098968</td>\n",
+       "      <td>6.066102</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "872"
+       "   country     osm_id         lat         lon\n",
+       "0  Algeria   27564946   36.364519     6.60826\n",
+       "1  Algeria   27565103  35.7032751  -0.6492976\n",
+       "2  Algeria  253292160  36.7137843   4.0493919\n",
+       "3  Algeria  262963217  33.3611766   6.8603492\n",
+       "4  Algeria  262964638  33.1098968    6.066102"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "osm_cities = osm_coords(response_dict)\n",
-    "len(osm_cities)"
+    "osm_cities.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "871\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(osm_cities))"
    ]
   },
   {
@@ -259,21 +367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write out .csv\n",
     "\n",
     "# NOTE - on 11-29-18 pulled 872 osm 'city' centroids w/o names to be used for AGU analysis \n",
-    "osm_cities.to_csv(outfilepath+'20181129_osm_africa_cities.csv', sep=',', index=False, header=True)"
+    "# NOTE - on 12-06-18 pulled 871 -note missing- osm 'city' centroids countries to be used for AGU analysis \n",
+    "\n",
+    "osm_cities.to_csv(temp_data+'20181206_osm_africa_cities_match.csv', sep=',', index=False, header=True)"
    ]
   },
   {
@@ -431,29 +534,29 @@
    "outputs": [],
    "source": [
     "# Loop through countries and make an np array w/ country, city name, id, lat, long\n",
-    "# import numpy as np\n",
-    "# import pandas as pd\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
-    "# coords = []\n",
-    "# for country in gps:    \n",
-    "#     for city in gps[country]:\n",
-    "#         country_name = country\n",
-    "#         city_name = city\n",
-    "#         i_d = gps[country][city].get('id')\n",
-    "#         lat = gps[country][city].get('lat')\n",
-    "#         lon = gps[country][city].get('lon')\n",
-    "#         coords.append((country_name, city_name, i_d, lat, lon))\n",
+    "coords = []\n",
+    "for country in gps:    \n",
+    "    for city in gps[country]:\n",
+    "        country_name = country\n",
+    "        city_name = city\n",
+    "        i_d = gps[country][city].get('id')\n",
+    "        lat = gps[country][city].get('lat')\n",
+    "        lon = gps[country][city].get('lon')\n",
+    "        coords.append((country_name, city_name, i_d, lat, lon))\n",
     "\n",
-    "# coords_arr = np.array(coords)\n",
-    "# coords_arr\n",
+    "coords_arr = np.array(coords)\n",
+    "coords_arr\n",
     "\n",
-    "# # Try to make it into a dataframe\n",
-    "# gps_df = pd.DataFrame(data=coords_arr)\n",
-    "# gps_df.columns = ['Country','City','Id','lat','lon']\n",
+    "# Try to make it into a dataframe\n",
+    "gps_df = pd.DataFrame(data=coords_arr)\n",
+    "gps_df.columns = ['Country','City','Id','lat','lon']\n",
     "\n",
     "\n",
-    "# write it out \n",
-    "# gps_df.to_csv(outpath+'africa_cities.csv', sep=',', index=False, header=True)"
+    "write it out \n",
+    "gps_df.to_csv(outpath+'africa_cities.csv', sep=',', index=False, header=True)"
    ]
   },
   {
@@ -517,7 +620,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -531,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
