--- a/notebooks/jupyter/OSM_Raster_PolyPoints.ipynb
+++ b/notebooks/jupyter/OSM_Raster_PolyPoints.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,24 +87,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# will build out folders later\n",
     "\n",
     "# data folder git will ignore\n",
-    "infilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/data/\" # git will ignore\n",
-    "outfilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/temp_data/\" # git will not ignore - NO BIG FILES \n",
+    "#infilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/data/\" # git will ignore\n",
+    "#outfilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/temp_data/\" # git will not ignore - NO BIG FILES \n",
     "\n",
     "# Local computer \n",
-    "# infilepath = '/Users/cascade/Github/NTL/data/raw/worldpop/Africa-1km-Population/'\n",
-    "# outfilepath = '/Users/cascade/Github/NTL/temp_data/'"
+    "infilepath = '/Users/cascade/Github/NTL/data/raw/worldpop/Africa-1km-Population/'\n",
+    "outfilepath = '/Users/cascade/Github/NTL/temp_data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,102 +136,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>27564946</td>\n",
-       "      <td>36.364519</td>\n",
-       "      <td>6.608260</td>\n",
-       "      <td>POINT (6.60826 36.364519)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>27565103</td>\n",
-       "      <td>35.703275</td>\n",
-       "      <td>-0.649298</td>\n",
-       "      <td>POINT (-0.6492975999999999 35.7032751)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>253292160</td>\n",
-       "      <td>36.713784</td>\n",
-       "      <td>4.049392</td>\n",
-       "      <td>POINT (4.0493919 36.7137843)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>262963217</td>\n",
-       "      <td>33.361177</td>\n",
-       "      <td>6.860349</td>\n",
-       "      <td>POINT (6.8603492 33.3611766)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>262964638</td>\n",
-       "      <td>33.109897</td>\n",
-       "      <td>6.066102</td>\n",
-       "      <td>POINT (6.066102 33.1098968)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>264573224</td>\n",
-       "      <td>33.806352</td>\n",
-       "      <td>2.880862</td>\n",
-       "      <td>POINT (2.8808616 33.8063518)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "          id        lat       lon                                geometry\n",
-       "0   27564946  36.364519  6.608260               POINT (6.60826 36.364519)\n",
-       "1   27565103  35.703275 -0.649298  POINT (-0.6492975999999999 35.7032751)\n",
-       "2  253292160  36.713784  4.049392            POINT (4.0493919 36.7137843)\n",
-       "3  262963217  33.361177  6.860349            POINT (6.8603492 33.3611766)\n",
-       "4  262964638  33.109897  6.066102             POINT (6.066102 33.1098968)\n",
-       "5  264573224  33.806352  2.880862            POINT (2.8808616 33.8063518)"
+       "872"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "osm_point_gdf.head(6)"
+    "len(osm_point_gdf)"
    ]
   },
   {
